# CartoonMangaClassifier

./: Dockerfile  README.md  app.py  category_queries.json  classifier.ipynb  download_images.py  image_to_features_model.joblib  pyproject.toml  requirements.in  requirements.txt
app/: Dockerfile  app.py
