[tool.poetry]
name = "imageclassifier"
version = "0.1.0"
description = ""
authors = ["Rajat Jacob <rajatjacob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.18.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
pillow = "^10.2.0"
matplotlib = "^3.8.3"
matplotlib-inline = "^0.1.6"
scikit-learn = "^1.4.1.post1"
streamlit = "^1.31.1"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
